# car_gen_and_modeling

./: .gitignore  README.md  pyproject.toml
cargen/: __init__.py  backends.py  pipeline.py
cargen/core/: __init__.py  asset.py  camera.py  splat.py
cargen/export/: __init__.py  exporter.py
cargen/feature_matching/: __init__.py  interface.py  lightglue_impl.py  orb.py
cargen/fusion_engine/: __init__.py  consolidate.py  engine.py  gsplat_common.py  gsplat_renderer.py  optimize.py  point_renderer.py  renderer.py  residual.py  symmetry.py
cargen/pose_estimation/: __init__.py  colmap_impl.py  fallback.py  interface.py  registration.py  render_reid.py  stub.py  video_tracker.py
cargen/prior_generation/: __init__.py  canonical.py  custom_slot.py  interface.py  mesh_to_splats.py  sf3d_impl.py  stub.py  trellis_impl.py  tripo_api.py
cargen/reid/: __init__.py  dino_embed.py  histogram.py  interface.py  verify.py
cargen/segmentation/: __init__.py  interface.py  rembg_impl.py  stub.py
cargen/video/: __init__.py  frame_sampler.py
clients/capture/: app.js  index.html  manifest.json
demo/: __init__.py  run_demo.py  synthetic.py
docs/: DEVELOPMENT.md  ROADMAP.md  SETUP.md
scripts/: _build_gsplat.bat  _debug_cuda_env.bat  _run_verify_gsplat.bat  _verify_gsplat_log.txt  consolidate_vehicle.py  run_server.bat  verify_gsplat.py
server/: __init__.py  __main__.py  app.py  config.py  events.py  merge.py  queue.py  store.py
tests/: conftest.py  test_colmap_impl.py  test_consolidate.py  test_core.py  test_export.py  test_fusion.py  test_perception.py  test_pipeline.py  test_render_reid.py  test_server.py  test_symmetry.py
viewer/: index.html  main.js
