[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cargen"
version = "0.1.0"
description = "Dynamic vehicle 3D reconstruction: single-photo generative prior + incremental multi-device fusion on 3D Gaussian Splatting"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "httpx>=0.27"]
# Milestone A (real ML backends) — installed separately, see README:
#   torch/torchvision (CUDA build), rembg, trimesh, pillow
# Milestone B: gsplat, lightglue (requires VS Build Tools + CUDA Toolkit)
# These extras are an install inventory only, not a runnable index: pip
# extras can't express --index-url, so docs/SETUP.md's explicit CUDA-wheel
# command stays authoritative for torch.
ml-a = ["torch", "torchvision", "rembg[cpu]", "trimesh", "pillow"]
ml-b = ["gsplat", "lightglue"]

[tool.setuptools.packages.find]
include = ["cargen*", "server*"]

[tool.pytest.ini_options]
addopts = "--cov=cargen --cov=server --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
# Real-model adapters need downloaded weights / GPU toolchains; they are
# verified by the milestone acceptance runs, not unit tests (user-approved).
omit = [
    "cargen/segmentation/rembg_impl.py",
    "cargen/prior_generation/sf3d_impl.py",
    "cargen/prior_generation/trellis_impl.py",
    "cargen/prior_generation/tripo_api.py",
    "cargen/prior_generation/custom_slot.py",
    "cargen/feature_matching/lightglue_impl.py",
    "cargen/fusion_engine/gsplat_renderer.py",
    "cargen/fusion_engine/optimize.py",
    "cargen/fusion_engine/consolidate.py",
    "cargen/pose_estimation/colmap_impl.py",
    "cargen/reid/dino_embed.py",
    "server/__main__.py",
]
